Update stylesheet to work with Atom 1.19.4 - Realign line numbers with lines of code - Fix issue with cursor insertion (where clicking to the leftmost edge of a line of code is ignored and Atom does not move the cursor to the start of the line as it should, and thus a second, more precise click is required to insert the cursor correctly)

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -61,9 +61,12 @@ atom-text-editor .scroll-view {
 
 // Improve gutter appearance
 atom-text-editor {
+  .gutter-container {
+    background-color: #ddd !important;
+  }
   .gutter {
     background-color: #ddd;
-    padding-top: 6px;
+    margin-top: 6px;
     .line-number {
        color: #888;
        opacity: 1;
@@ -76,6 +79,13 @@ atom-text-editor {
          opacity: 1;
        }
      }
+  }
+  .scroll-view {
+    margin-left: -12px;
+    padding-left: 12px;
+  }
+  .lines {
+    padding-left: 12px;
   }
 }
 
